--- a/mysocietywebsite/appsettings.json
+++ b/mysocietywebsite/appsettings.json
@@ -1,10 +1,18 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mysql;Port=3306;Database=mysocietyDB;User=admin;Password=12345;"
+  },
+  "payment": {
+    "Host": "https://mercury-uat.phonepe.com",
+    "MerchantId": "M2306160483220675579140",
+    "Key": "b972ea5a-84d8-4399-89c3-63c6df0d6e86"
+  }
 }
