--- a/mysocietywebsite.Resource/mysocietywebsite.Resource.csproj
+++ b/mysocietywebsite.Resource/mysocietywebsite.Resource.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\mysocietywebsite.Model\mysocietywebsite.Model.csproj" />
+  </ItemGroup>
+
 </Project>
