Role COntroller added

--- a/mysocietywebsite/appsettings.json
+++ b/mysocietywebsite/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql;Port=3306;Database=mysocietyDB;User=admin;Password=12345;"
+    "DefaultConnection": "Server=localhost;Port=3305;Database=mysocietyDB;User=root;Password=Tftus@123;"
   },
   "payment": {
     "Host": "https://mercury-uat.phonepe.com",
