--- a/mysocietywebsite.Service/mysocietywebsite.Service.csproj
+++ b/mysocietywebsite.Service/mysocietywebsite.Service.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\mysocietywebsite.Resource\mysocietywebsite.Resource.csproj" />
   </ItemGroup>
 
