--- a/mysocietywebsite/appsettings.json
+++ b/mysocietywebsite/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,7 +8,10 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3305;Database=mysocietyDB;User=root;Password=Tftus@123;"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=jobsite;User=avneesh;Password=password"
+  },
+  "AppSettings": {
+    "Secret": "akwuyekjsdfjhdsgjhgfsdjhgf*kdshfjsdfdjd#sdfsjkdfg%sdfkjsdlkভাল"
   },
   "payment": {
     "Host": "https://mercury-uat.phonepe.com",
