Added the login and registration page with jwt authentication

--- a/mysocietywebsite.Service/mysocietywebsite.Service.csproj
+++ b/mysocietywebsite.Service/mysocietywebsite.Service.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\mysocietywebsite.Common\mysocietywebsite.Common.csproj" />
     <ProjectReference Include="..\mysocietywebsite.Resource\mysocietywebsite.Resource.csproj" />
   </ItemGroup>
 
