--- a/mysocietywebsite.Model/mysocietywebsite.Model.csproj
+++ b/mysocietywebsite.Model/mysocietywebsite.Model.csproj
@@ -14,4 +14,12 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\mysocietywebsite.Common\mysocietywebsite.Common.csproj" />
+  </ItemGroup>
+
 </Project>
