--- a/mysocietywebsite/appsettings.json
+++ b/mysocietywebsite/appsettings.json
@@ -11,7 +11,8 @@
     "DefaultConnection": "Server=localhost;Port=3306;Database=jobsite;User=avneesh;Password=password"
   },
   "AppSettings": {
-    "Secret": "akwuyekjsdfjhdsgjhgfsdjhgf*kdshfjsdfdjd#sdfsjkdfg%sdfkjsdlkভাল"
+    "Secret": "akwuyekjsdfjhdsgjhgfsdjhgf*kdshfjsdfdjd#sdfsjkdfg%sdfkjsdlkভাল",
+    "Salt": "ভালভালভালভালভালভাweuwei#@$&%ভাল"
   },
   "payment": {
     "Host": "https://mercury-uat.phonepe.com",
