--- a/mysocietywebsite/mysocietywebsite.csproj
+++ b/mysocietywebsite/mysocietywebsite.csproj
@@ -31,6 +31,10 @@
     <ProjectReference Include="..\mysocietywebsite.Service\mysocietywebsite.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\NewFolder\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
