Added the contact us and dashoard to the website

--- a/mysocietywebsite/mysocietywebsite.csproj
+++ b/mysocietywebsite/mysocietywebsite.csproj
@@ -32,6 +32,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\components\NewFolder\" />
     <Folder Include="ClientApp\src\NewFolder\" />
   </ItemGroup>
 
