Added the upload and download facility on both the layes of the web application

--- a/mysocietywebsite.Resource/mysocietywebsite.Resource.csproj
+++ b/mysocietywebsite.Resource/mysocietywebsite.Resource.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\mysocietywebsite.Model\mysocietywebsite.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.13" />
+  </ItemGroup>
+
 </Project>
